--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an . Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>This is an demo. If I save this, CodeDeploy will deploy this to my EC2 . Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
